--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "connect-timeout": "^1.8.0",
     "express": "^4.0",
     "jade": "*",
     "js-yaml": "*",
