--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "express": "^4.0",
     "jade": "*",
     "js-yaml": "*",
-    "node-usb-barcode-scanner": "^1.0.1"
+    "node-usb-barcode-scanner": "^1.0.1",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
